add basic simulator function (adapted from EasyDccSim) + tests add check for existing EasyDccSimulator adapter

--- a/java/src/jmri/jmrix/sprog/SprogBundle.properties
+++ b/java/src/jmri/jmrix/sprog/SprogBundle.properties
@@ -10,6 +10,7 @@ SprogXFirmwareUpdate = SPROG{0} Firmware Update
 #SprogFirmwareUpdate = SPROG Firmware Update
 SprogConsoleTitle = SPROG Console
 SprogProgrammerTitle = SPROG Programmer
+SprogSimulatorTitle = SPROG Sim
 SprogBootloaderXTitle = SPROG{0} Bootloader
 SprogVersionTitle = SPROG Version
 SprogVersionDialogString = SPROG version: {0}
