Add real replies for Sprog (not yet seen in monitor) Sprog console i18n Javadoc

--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -220,6 +220,7 @@ TooltipReceived         = The number of packets received
 TooltipClearCounters    = Clear the sent and received packet counters
 SentTitle               = Sent
 ReceivedTitle           = Received
+Timeout                 = Timeout
 
 # cmri/rps/maple/acela shared items
 ConfigNodesTitle        = Configure Nodes
