Adds new columns to the openlcb turnout table that allow querying and forgetting the state of a turnout.

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -354,6 +354,12 @@ SpeedsMenuItemDefaults = Defaults...
 TurnoutAutomationMenu = Automation
 TurnoutAutomationMenuItemEdit = Edit...
 
+StateForgetHeader = State
+StateQueryHeader = State
+StateAuthHeader = Authoritative
+StateForgetButton = Forget
+StateQueryButton = Query
+
 EditTurnoutOperation = Edit Auto
 TurnoutDoAutomationBoxTooltip = Enable automatic retry setting for all Turnouts?
 NameSetting = Give name to this setting
