Makes the OpenLCB specific columns be visible or hidden by a checkbox. We only show the checkbox if there is an openlcb connection.

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -372,6 +372,8 @@ ThrownSpeed = Thrown Speed
 ShowFeedbackInfo = Show Feedback information
 ShowLockInfo = Show Lock information
 ShowTurnoutSpeedDetails = Show Turnout Speed details
+ShowOpenLCB = Show OpenLCB State actions
+OpenLCBBoxToolTip = Displays columns for manipulating OpenLCB state
 UseForAllTurnouts = Do you want to use the last setting for all turnouts in this range?
 UseSetting = Use Setting
 AutomaticRetry = Automatic retry
