Tweak layout track drawing options
Add block line dash percentages
Make "JMRI Classic" preset look more like JMRI classic.
Change Garish preset to "British '70's" preset.
Correct some isBlock logic (so things draw correctly).
Refactor getTurnoutDrawUnselectedLeg => isTurnoutDrawUnselectedLeg (depreciate old)

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -648,9 +648,9 @@ CheckUnnecessaryAnchorsMenuToolTip = Select this to check if the adjacent track 
 ClassicPresetName = Classic JMRI
 CustomPresetName = Custom
 DraftingPresetName = Drafting
-GarishPresetName = Garish
-RealisticOhPresetName = Realistic Oh!
+British70sPresetName = British 70's
 RealisticPresetName = Realistic
+RealisticOhPresetName = Realistic Oh!
 
 #the top labels text and tooltips
 MainlineColumnToolTip = This column is for mainline options
@@ -662,32 +662,35 @@ SidelineLabelText = Sideline
 
 #the option labels text and tooltips
 BallastColorLabelText = Ballast Color
-BallastColorToolTip = Click one of the buttons to the right to set the color of the ballast
+BallastColorToolTip = Use the buttons to the right to set the color of the ballast
 BallastWidthLabelText = Ballast Width
-BallastWidthToolTip = Click one of the buttons to the right to set the width of the ballast
+BallastWidthToolTip = Use the spinner to the right to set the width of the ballast
 BlockLineWidthLabelText = Block Line Width
-BlockLineWidthToolTip = Click one of the buttons to the right to set the width of the block line
+BlockLineWidthToolTip = Use the spinner to the right to set the width of the block line
+BlockLineDashPercentageX10LabelText = Block Line Dash Percentage (x10)
+BlockLineDashPercentageX10ToolTip = Use the spinner to the right to set the dash percentage (times ten) of the block line
 RailColorLabelText = Rail Color
-RailColorToolTip = Click one of the buttons to the right to set the color of the rails
+RailColorToolTip = Use the buttons to the right to set the color of the rails
 RailCountLabelText = Rail Count
-RailCountToolTip = Click one of the buttons to the right to set the number of rails
+RailCountToolTip = Use the spinner to the right to set the number of rails
 RailGapLabelText = Rail Gap
-RailGapToolTip = Click one of the buttons to the right to set the distance between the rails
+RailGapToolTip = Use the spinner to the right to set the distance between the rails
 RailWidthLabelText = Rail Width
-RailWidthToolTip = Click one of the buttons to the right to set the width of the rails
+RailWidthToolTip = Use the spinner to the right to set the width of the rails
 TieColorLabelText = Tie Color
-TieColorToolTip = Click one of the buttons to the right to set the color of the ties
+TieColorToolTip = Use the buttons to the right to set the color of the ties
 TieGapLabelText = Tie Gap
-TieGapToolTip = Click one of the buttons to the right to set the distance between the ties
+TieGapToolTip = Use the spinner to the right to set the distance between the ties
 TieLengthLabelText = Tie Length
-TieLengthToolTip = Click one of the buttons to the right to set the length of the ties
+TieLengthToolTip = Use the spinner to the right to set the length of the ties
 TieWidthLabelText = Tie Width
-TieWidthToolTip = Click one of the buttons to the right to set the width of the ties
+TieWidthToolTip = Use the spinner to the right to set the width of the ties
 
 #the mainline option tooltips
 MainBallastColorToolTip = Click this button to set the color of the mainline ballast
 MainBallastWidthToolTip = Click this button to set the width of mainline ballast
 MainBlockLineWidthToolTip = Click this button to set the width of mainline block lines
+MainBlockLineDashPercentageX10ToolTip = Click this button to set the mainline block lines dash percentage (times ten)
 MainRailColorToolTip = Click this button to set the color of mainline rails
 MainRailCountToolTip = Click this button to set the number of mainline rails
 MainRailGapToolTip = Click this button to set the distance between mainline rails
@@ -701,6 +704,7 @@ MainTieWidthToolTip = Click this button to set the width of mainline ties
 SideBallastColorToolTip = Click this button to set the color of sideline ballast
 SideBallastWidthToolTip = Click this button to set the width of sideline ballast
 SideBlockLineWidthToolTip = Click this button to set the width of sideline block lines
+SideBlockLineDashPercentageX10ToolTip = Click this button to set the sideline block lines dash percentage (times ten)
 SideRailColorToolTip = Click this button to set the color of sideline rails
 SideRailCountToolTip = Click this button to set the number of sideline rails
 SideRailGapToolTip = Click this button to set the distance between sideline rails
