Bit Assignment Comment Field

--- a/java/src/jmri/jmrix/cmri/serial/assignment/ListBundle.properties
+++ b/java/src/jmri/jmrix/cmri/serial/assignment/ListBundle.properties
@@ -5,6 +5,8 @@
 #WindowTitle         = List C/MRI Assignments
 
 NodePanelName       = Connection
+NodeBoxLabel        = Node
+Connection          = Connection
 
 BitsPerCard         = bits per card
 NoNodesError        = ERROR - no C/MRI nodes were found.
