Improve coordination between Entry/Exit and Layout Editor

--- a/java/src/jmri/jmrit/entryexit/EntryExitBundle.properties
+++ b/java/src/jmri/jmrit/entryexit/EntryExitBundle.properties
@@ -13,7 +13,9 @@ BeanNameDestination = NX Destination Point
 StackRouteAsk = Would you like to Stack the Route?
 RouteNotClear = Route Not Clear
 Error1 = No item was selected in the list.\nPlease do so and click {0} or leave Route Stacked.
-DeleteWarningTitle = Delete Denied
+DeleteReferences = The following Logix Conditionals have NX Pair references.\nThis will prevent the NX Pair deletions.
+DeletePairs = The following Entry/Exit pairs will be deleted\ndue to Layout Editor panel changes.
+DeleteContinue = Continue?
 
 Stack = Stack
 ClearDown = Clear Down
