--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -611,6 +611,13 @@ VetoWillBeRemovedFromBlock = It will be removed from the layout block
 BeanNameLayoutBlock = Layout Block
 Line = Line
 
+# Icon delete messages
+DeleteReference = {0} "{1}" is linked to the following items.<br>Do you want to remove those references?<br>
+DeleteSmlReference = {0} "{1}" is linked to the following items.<br>Do you want to remove those references and Signal Mast Logic?<br>
+DeleteAtPoint1 = <br>Point of "{0}"
+DeleteAtPoint2 = &nbsp;and "{0}"
+DeleteAtOther = <br>{0}: "{1}"
+
 #check menu items
 CheckMenuTitle = Check
 ReCheckMenuTitle = Re-Check
