--- a/build.xml
+++ b/build.xml
@@ -1343,6 +1343,8 @@
             <sysproperty key="jmri.prefsdir" path="${tempdir}"/>
             <sysproperty key="cucumber.options" value="--tags 'not @Ignore'"/>
             <sysproperty key="wdm.forceCache" value="true"/>
+            <!-- wdm.targetPath specifies the locaion of the web drivers on appveyor. -->
+            <sysproperty key="wdm.targetPath" value="C:\Tools\WebDriver"/> 
 
             <classpath refid="test.class.path"/>
 
