Makes the state query and forget buttons be not openlcb-specific and show up all the time when the State Actions check box is ticked in the footer. Adds tick box for the "ListenState" settings for olcb turnouts in the turnouts table. Adds help text as tooltip to both the auth and the listen checkbox. Adds accessors to the olcbturnout object for the listening to state messages property.

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -356,7 +356,13 @@ TurnoutAutomationMenuItemEdit = Edit...
 
 StateForgetHeader = State
 StateQueryHeader = State
-StateAuthHeader = Authoritative
+OlcbStateAuthHeader = Authoritative
+OlcbStateAuthToolTip = Sets whether an OpenLCB object should respond to state messages. When \
+  unticked, all responses will contain UNKNOWN state.
+OlcbStateListenHeader = Always listen
+OlcbStateListenToolTip = If ticked, all state reports will update local state. If unticked, state\
+   reports will update local state only if local state is UNKNOWN. State change messages (Event \
+  Reports) are not subject to this setting.
 StateForgetButton = Forget
 StateQueryButton = Query
 
@@ -372,8 +378,8 @@ ThrownSpeed = Thrown Speed
 ShowFeedbackInfo = Show Feedback information
 ShowLockInfo = Show Lock information
 ShowTurnoutSpeedDetails = Show Turnout Speed details
-ShowOpenLCB = Show OpenLCB State actions
-OpenLCBBoxToolTip = Displays columns for manipulating OpenLCB state
+ShowState = Show State actions
+StateBoxToolTip = Displays columns for manipulating state
 UseForAllTurnouts = Do you want to use the last setting for all turnouts in this range?
 UseSetting = Use Setting
 AutomaticRetry = Automatic retry
