--- a/java/test/apps/PanelPro/profiles/Sprog_Simulator/profile/profile.properties
+++ b/java/test/apps/PanelPro/profiles/Sprog_Simulator/profile/profile.properties
@@ -1,16 +1,15 @@
-#JMRI Preferences version 4.9.6ish+me+20171108T1748Z+Rebfe011413
-#Wed Nov 08 18:52:33 CET 2017
+#JMRI Preferences version 4.11.2ish+me+20180113T1714Z+R7278b91ac1
+#Sat Jan 13 18:15:35 CET 2018
 apps-gui.fontSize=0
-apps-gui.graphicTableState=true
+apps-gui.graphicTableState=false
 apps-gui.locale=en-US
 apps-gui.lookAndFeel=com.apple.laf.AquaLookAndFeel
 apps-gui.nonstandardMouseEvent=false
 apps-gui.showToolTipDismissDelay=4000
-apps-gui.verticalToolBar=false
 apps-systemconsole.fontFamily=Monospaced
 apps-systemconsole.fontSize=12
 apps-systemconsole.fontStyle=0
-apps-systemconsole.scheme=7
+apps-systemconsole.scheme=0
 apps-systemconsole.wrapStyle=2
 jmri-implementation.scripts=program\:jython/
 jmri-implementation.user-files=profile\:
@@ -21,34 +20,25 @@ jmri-jmris-srcp.port=4303
 jmri-jmrit-roster.defaultOwner=
 jmri-jmrit-roster.directory=preference\:
 jmri-jmrit-symbolicprog.canCacheDefault=false
-jmri-jmrit-symbolicprog.defaultFile=Comprehensive
 jmri-jmrit-symbolicprog.doConfirmRead=false
 jmri-jmrit-symbolicprog.showCvNumbers=false
 jmri-jmrit-symbolicprog.showEmptyPanes=true
 jmri-jmrix-loconet-loconetovertcp.port=1234
 jmri-managers.allInternalDefaults=false
 jmri-managers.defaults.jmri-AddressedProgrammerManager=Internal
-jmri-managers.defaults.jmri-CommandStation=Internal
 jmri-managers.defaults.jmri-ConsistManager=Internal
 jmri-managers.defaults.jmri-GlobalProgrammerManager=Internal
-jmri-managers.defaults.jmri-PowerManager=Internal
-jmri-managers.defaults.jmri-ThrottleManager=TMCC Simulator
+jmri-managers.defaults.jmri-PowerManager=SPROG Simulator
+jmri-managers.defaults.jmri-ThrottleManager=SPROG Simulator
 jmri-web-server.allowRemoteConfig=false
 jmri-web-server.clickDelay=1
-jmri-web-server.disableFrames=false
-jmri-web-server.disallowedFrames.0=DecoderPro
-jmri-web-server.disallowedFrames.1=PanelPro
-jmri-web-server.disallowedFrames.2=LocoNet Simulator
-jmri-web-server.disallowedFrames.3=Preferences
-jmri-web-server.disallowedFrames.4=WiThrottle
-jmri-web-server.disallowedFrames.5=Change Signal Head Icons
-jmri-web-server.disallowedFrames.6=Item Palette
+jmri-web-server.disableFrames=true
 jmri-web-server.port=12080
-jmri-web-server.railRoadName=Test Ops Entry
-jmri-web-server.readonlyPower=false
+jmri-web-server.railroadName=My JMRI Railroad
+jmri-web-server.readonlyPower=true
 jmri-web-server.redirectFramesToPanels=true
 jmri-web-server.refreshDelay=5
 jmri-web-server.simple=false
 jmri-web-server.useAjax=true
-profile.id=TMCC Simulator.3f033c2b
-profile.name=TMCC_Simulator
+profile.id=Sprog_Simulator.3d40b3b8
+profile.name=Sprog Simulator
