--- a/java/src/jmri/jmrix/loconet/bdl16/BDL16x.properties
+++ b/java/src/jmri/jmrix/loconet/bdl16/BDL16x.properties
@@ -2,7 +2,7 @@
 #
 # author: B. Milhaupt (C) 2017
 
-STATUS_TEXT_BOARD_MODE = The BDL16x should be in its normal mode. (Do not push any of the buttons on the BDL16x!)
+STATUS_TEXT_BOARD_MODE = > The BDL16x should be in its normal mode. (Do not push any of the buttons on the BDL16x!)
 
 COMBOBOX_TEXT_OPSW01_THROWN = Direct Home rail wiring (default)
 COMBOBOX_TEXT_OPSW03_THROWN = Normal polarity for detection (default)
@@ -38,9 +38,9 @@ ButtonTextReadFullSheet = Read Full Sheet
 ToolTipButtonTextReadFullSheet = Read all OpSws from selected device
 ButtonTextWriteFullSheet = Write Full Sheet
 ToolTipButtonTextWriteFullSheet = Write all OpSws to the selected device
-LabelBoardID = Board ID:
-LabelX = OpSw{0}:
-LabelXY = OpSw{0} and OpSw{1}:
+LabelBoardID        = Board ID:
+LabelX              = OpSw{0}:
+LabelXY             = OpSw{0} and OpSw{1}:
 
 TitledBorderLabelBdl168Only = Options for BDL168 Only
 TitledBorderLabelAllBoards = Options for BDL16, BDL162, and BDL168
