--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -131,6 +131,8 @@ ThrowTwoTurnouts = Also Throw Turnout
 SecondTurnoutInvert = Invert Second Turnout
 
 # individual edit pane items
+SetArcAngle = Set Arc Angle
+SetArcAngleHint = Set Arc Angle
 EditTurnout = Edit Turnout
 EditXing = Edit Level Crossing
 EditSlip = Edit Slip
@@ -617,6 +619,11 @@ DeleteSmlReference = {0} "{1}" is linked to the following items.<br>Do you want 
 DeleteAtPoint1 = <br>Point of "{0}"
 DeleteAtPoint2 = &nbsp;and "{0}"
 DeleteAtOther = <br>{0}: "{1}"
+
+# Block/Sensor messages
+BlockSensorTitle = Block Entry/Exit Sensor Notification
+BlockSensorLine1 = <html>Block selection is disabled because the current block is being used by Entry/Exit Pairs.<p>
+BlockSensorLine2 = The Entry/Exit sensors are listed below.
 
 #check menu items
 CheckMenuTitle = Check
