--- a/java/src/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -25,6 +25,8 @@ MenuItemSetID               = Configure LocoNet ID
 MenuItemPr3ModeSelect       = Select PR3 Mode
 MenuItemDuplex              = Configure Duplex Group
 
+LNCPMast = LNCP Signal Mast Decoder
+
 LABEL_UNIT_ADDRESS          = Unit address:
 
 STATUS_READING_OPSW         = Reading OpSw
