Addressing code review comments.

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -371,7 +371,7 @@ ThrownSpeed = Thrown Speed
 ShowFeedbackInfo = Show Feedback information
 ShowLockInfo = Show Lock information
 ShowTurnoutSpeedDetails = Show Turnout Speed details
-ShowState = Show State actions
+ShowStateForgetAndQuery = Show State actions
 StateBoxToolTip = Displays columns for manipulating state
 UseForAllTurnouts = Do you want to use the last setting for all turnouts in this range?
 UseSetting = Use Setting
