Fixes bundle message naming. Fixes todo by moving the system-specific columns to a separate selection box independent of the state forget/query selection.

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -368,11 +368,13 @@ TurnoutOperationErrorDialog = There is no operation type suitable for this turno
 TurnoutOperationForTurnout = Turnout Operation for Turnout
 ClosedSpeed = Closed Speed
 ThrownSpeed = Thrown Speed
+ShowSystemSpecificProperties = Show System-specific columns
+ShowSystemSpecificPropertiesToolTip = If the underlying hardware has additional options to set, shows the columns for these options.
 ShowFeedbackInfo = Show Feedback information
 ShowLockInfo = Show Lock information
 ShowTurnoutSpeedDetails = Show Turnout Speed details
-ShowStateForgetAndQuery = Show State actions
-StateBoxToolTip = Displays columns for manipulating state
+ShowStateForgetAndQuery = Show State Query actions
+StateForgetAndQueryBoxToolTip = Displays columns for clearing and querying state
 UseForAllTurnouts = Do you want to use the last setting for all turnouts in this range?
 UseSetting = Use Setting
 AutomaticRetry = Automatic retry
