add Sim Mode option to connection config pane, stored in profile

--- a/java/src/jmri/jmrix/sprog/SprogBundle.properties
+++ b/java/src/jmri/jmrix/sprog/SprogBundle.properties
@@ -98,5 +98,8 @@ PiSprogNanoCSTitle = Pi-SPROG Nano Command Station
 PiSprog1ProgrammerTitle = Pi-SPROG One Programmer
 PiSprog1CSTitle = Pi-SPROG One Command Station
 
+#SprogSimulator items
+SprogSimOption = Operate as
+
 # SprogTurnout (Add to table pane) item (no inputs)
 AddOutputEntryToolTip = enter a number from 1 to 2044 (inclusive).
