Start Sprog Sim adapter as Programmer (SERVICE) instead update profile, include option

--- a/java/test/apps/PanelPro/profiles/Sprog_Simulator/profile/profile.properties
+++ b/java/test/apps/PanelPro/profiles/Sprog_Simulator/profile/profile.properties
@@ -25,8 +25,9 @@ jmri-jmrit-symbolicprog.showCvNumbers=false
 jmri-jmrit-symbolicprog.showEmptyPanes=true
 jmri-jmrix-loconet-loconetovertcp.port=1234
 jmri-managers.allInternalDefaults=false
-jmri-managers.defaults.jmri-AddressedProgrammerManager=Internal
-jmri-managers.defaults.jmri-ConsistManager=Internal
+jmri-managers.defaults.jmri-AddressedProgrammerManager=SPROG Simulator
+jmri-managers.defaults.jmri-CommandStation=SPROG Simulator
+jmri-managers.defaults.jmri-ConsistManager=SPROG Simulator
 jmri-managers.defaults.jmri-GlobalProgrammerManager=Internal
 jmri-managers.defaults.jmri-PowerManager=SPROG Simulator
 jmri-managers.defaults.jmri-ThrottleManager=SPROG Simulator
