--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,11 @@ findbugs.html
 spotbugs.xml
 spotbugs.html
 jacoco.exec
+jmri-fb.html
+
 coveragereport
+tests.log
+cucumber-results.xml
 
 # runtime artifacts
 messages.log*
@@ -55,5 +59,4 @@ RemoteSystemsTempFiles
 # OS junk files
 [Tt]humbs.db
 *.DS_Store
-/jmri-fb.html
-cucumber-results.xml
+
