Dispatcher and Display bundle edits NL move up hint on Transits pane

--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
@@ -153,7 +153,7 @@ AddNewTrainButtonHint = Click to activate a new Train using the entered informat
 CancelButtonHint = Click to cancel without activating a new Train.
 LoadButton = Load Train Info
 LoadButtonHint = Click to load previously saved Train information (optional).
-SaveButton = Save Train Info
+SaveButton=Save Train Info...
 SaveButtonHint = Click to save Train information from this pane (optional).
 DeleteButton = Delete...
 DeleteButtonHint = Click to delete a previously saved Train information file.
