--- a/build.xml
+++ b/build.xml
@@ -263,9 +263,14 @@
         <pathelement location="${jartarget}"/>
         <path refid="compile.class.path"/>
         <!-- powermock and it's dependencies -->
-        <pathelement location="${libdir}/mockito-core-2.0.42-beta.jar"/>
-        <pathelement location="${libdir}/powermock-mockito2-1.6.5-full.jar"/>
-        <pathelement location="${libdir}/powermock-api-mockito-common-1.6.5.jar"/>
+        <pathelement location="${libdir}/mockito-core-2.7.5.jar"/>
+        <pathelement location="${libdir}/powermock-mockito2-1.7.0RC4.jar"/>
+        <pathelement location="${libdir}/powermock-api-mockito2-1.7.0RC4.jar"/>
+        <pathelement location="${libdir}/powermock-api-mockito-common-1.7.0RC4.jar"/>
+        <pathelement location="${libdir}/powermock-api-support-common-1.7.0RC4.jar"/>
+        <pathelement location="${libdir}/powermock-core-1.7.0RC4.jar"/>
+        <pathelement location="${libdir}/powermock-module-junit4-1.7.0RC4.jar"/>
+        <pathelement location="${libdir}/powermock-module-junit4-common-1.7.0RC4.jar"/>
         <pathelement location="${libdir}/cglib-nodep-2.2.2.jar"/>
         <pathelement location="${libdir}/javassist-3.20.0-GA.jar"/>
         <pathelement location="${libdir}/objenesis-2.2.jar"/>
