--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <ant.version>1.10.1</ant.version>
         <ant.jvm.args></ant.jvm.args>
         <argLine>-Xmx1536m</argLine>
-        <powermock.version>1.6.6</powermock.version>
+        <powermock.version>1.7.0RC4</powermock.version>
         <surefire.version>2.20</surefire.version>
     </properties>
     <scm>
@@ -947,7 +947,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.0.42-beta</version>
+            <version>2.7.5</version>
             <scope>test</scope>
         </dependency>
         <!--
