Dispatcher NL additions, add existing tooltips, colon

--- a/java/src/jmri/jmrit/logix/WarrantBundle.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle.properties
@@ -32,7 +32,7 @@ HaltAllTrains   = Stop All Trains
 HaltAll         = Halt All
 forward         = Forward
 reverse         = Reverse
-step	= Step
+step	        = Step
 
 TrackerTable    = Tracker Table
 createTracker   = Create Tracker
@@ -133,7 +133,7 @@ SelectRoute     = Select a route first.
 SystemName      = System Name
 UserName        = User Name
 MakeRoute       = Define Route
-SetPower        = Choose Engine Consist
+SetPower        = Engine Consist
 RecordPlay      = Record/Playback Script
 OriginBlock     = Originating Location
 DestBlock       = Destination Location
@@ -357,7 +357,7 @@ NoBlock         = No Block
 Forward         = Run forward
 TTP             = TTP
 TTPtoolTip      = Time (in milliseconds) to run at low speed in the destination block to go to platform.
-SelectType      = Select Type
+SelectType      = Warrant Type
 SetSCParameters = Settings
 SmallLayoutTrainAutomater = Fast reacting
 NormalWarrant    = Prototypical
