--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
@@ -119,9 +119,9 @@ ToSafeSections = To Safe Secs
 UseSpeedProfileLabel = Use Speed Profile
 UseSpeedProfileHint = Only Available if Speed Profiled Loco
 StopBySpeedProfileLabel = Stop By Speed Profile
-StopBySpeedProfileHint  = Only Available if Speed Profiled Loco
-StopBySpeedProfileAdjustLabel = Adjust
-StopBySpeedProfileAdjustHint = Only If Stopping By Speed Profile 1500 is normal, larger numbers stop quicker.
+StopBySpeedProfileHint  = Only Available for a Speed Profiled Loco
+StopBySpeedProfileAdjustLabel = Adjust:
+StopBySpeedProfileAdjustHint = Only if Stopping By Speed Profile 1500 is normal; larger numbers stop quicker.
 AutoRunBoxHint = Select to request this Train be run automatically by JMRI Dispatcher.
 AllocateAllTheWay = Allocate Train as far as possible
 AllocateAllTheWayBoxHint = <html>Select for Train to be allocated from start to end as far as possible.<br>\
@@ -151,7 +151,7 @@ DepartureTimeMinHint = Enter fast clock departure time minutes (00-59).
 AddNewTrainButton = Add New Train
 AddNewTrainButtonHint = Click to activate a new Train using the entered information.
 CancelButtonHint = Click to cancel without activating a new Train.
-LoadButton = Load Train Info
+LoadButton = Load Train Info...
 LoadButtonHint = Click to load previously saved Train information (optional).
 SaveButton=Save Train Info...
 SaveButtonHint = Click to save Train information from this pane (optional).
@@ -239,7 +239,7 @@ ChoiceFrameTitle = Choose Next Section
 ExplainChoice = Please choose the Section to follow {0}.
 WarnCancel = Warning! You cancelled without selecting a Section,\nso JMRI will try to make a selection.
 
-NoTransitsMessage = Cannot open Dispatcher - no Transits found. Please create Transits and try again.
+NoTransitsMessage = Cannot open Dispatcher - no Transits found.\nPlease create Transits and try again.
 NoResetMessage = Sorry, the selected Transit is not set up for continuous running.\nSee Transit Table help for more information.
 NoEntryBlocks = The Selected Transit doesn't have any Entry Blocks
 NoAutoTurnoutsMessage = Sorry, automatic setting of turnouts has not been implemented yet.
