NL strings, unused (identical) key

--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
@@ -20,7 +20,6 @@ CancelRestartTitle = Cancel Auto Restart
 
 TransitColumnTitle = Transit
 TrainColumnTitle = Train
-ModeColumnTitle = Mode
 NextSectionColumnTitle = Next Section
 AllocateButtonName = Allocate Next
 
@@ -117,9 +116,8 @@ NumberOfBlocks = Number of Sections
 AsFarAsPos = As Far As Pos
 ToSafeSections = To Safe Secs
 UseSpeedProfileLabel = Use Speed Profile
-UseSpeedProfileHint = Only Available if Speed Profiled Loco
+UseSpeedProfileHint = Only Available with Speed Profiled Loco
 StopBySpeedProfileLabel = Stop By Speed Profile
-StopBySpeedProfileHint  = Only Available for a Speed Profiled Loco
 StopBySpeedProfileAdjustLabel = Adjust:
 StopBySpeedProfileAdjustHint = Only if Stopping By Speed Profile 1500 is normal; larger numbers stop quicker.
 AutoRunBoxHint = Select to request this Train be run automatically by JMRI Dispatcher.
