--- a/.classpath
+++ b/.classpath
@@ -97,9 +97,7 @@
 	<classpathentry kind="lib" path="lib/pi4j-service.jar"/>
 	<classpathentry kind="lib" path="lib/beansbinding-1.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/mockito-core-2.0.42-beta.jar"/>
-	<classpathentry kind="lib" path="lib/powermock-mockito2-1.6.5-full.jar"/>
-	<classpathentry kind="lib" path="lib/powermock-api-mockito-common-1.6.5.jar"/>
+	<classpathentry kind="lib" path="lib/mockito-core-2.13.0.jar"/>
 	<classpathentry kind="lib" path="lib/cglib-nodep-2.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
 	<classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
