Use Generics to promote DRYness
This does have the side effect of requiring that every JSON service respond on both (web)socket and HTTP connections (possbily with only HTTP error codes).

--- a/java/src/jmri/server/json/Bundle.properties
+++ b/java/src/jmri/server/json/Bundle.properties
@@ -1,5 +1,6 @@
 #HTTP 405 Method Not Allowed
 DeleteNotAllowed=Deleting {0} is not allowed.
+GetNotAllowed=Getting {0} is not allowed.
 PostNotAllowed=Posting {0} is not allowed.
 PutNotAllowed=Putting {0} is not allowed.
 #HTTP 400 Bad Request
