i18n Dispatcher allocation options, add tooltip, NL translation Add new option to Help, update Transit Table and Add New screen shots fix order of auto checkboxes

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -600,7 +600,9 @@ ColumnLocation = Location
 ColumnRouting = Routing
 ColumnAddress = Address
 
-#Used with Transits
+#Used with Transits (in TransitTable > Edit pane)
 TransitSectionIsSafe = Section Is Safe
-TransitSectionIsSafeHint = When allocating by safe sections only if it can allocate all the way to the next safe section will any section be allocated, no further sections will be allocated until the train reachs the next safe section.
+TransitSectionIsSafeHint = <html>When allocating By Safe Sections, only if we can allocate all the way to the next Safe Section<br>\
+  will any Section be allocated.<br>\
+  No further Sections will be allocated until the Train reaches the next Safe Section.</html>
 
