--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle.properties
@@ -39,6 +39,7 @@ ActionColName = Actions
 AddEditActions = View/Add/Edit Actions
 DirectionColName = Direction
 AlternateColName = Alternate
+SafeColName = Safe
 TitleViewActions = View Actions
 TitleAddAction = Add Action
 TitleEditAction = Edit Action
