--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
@@ -111,7 +111,7 @@ DestinationBlockBoxLabel = Destination Location of Train
 DestinationBlockBoxHint = Select the Block where the Train will be located when Transit ends.
 AutoRun = Run Train Automatically
 AllocateMethodLabel = Allocation Method
-AllocateMethodBoxHint = Number of Sections ahead to auto allocate
+AllocateMethodHint = Number of Sections ahead to auto allocate
 NumberOfBlocks = Number of Sections
 AsFarAsPos = As Far As Pos
 ToSafeSections = To Safe Secs
@@ -121,9 +121,10 @@ StopBySpeedProfileLabel = Stop By Speed Profile
 StopBySpeedProfileAdjustLabel = Adjust:
 StopBySpeedProfileAdjustHint = Only if Stopping By Speed Profile 1500 is normal; larger numbers stop quicker.
 AutoRunBoxHint = Select to request this Train be run automatically by JMRI Dispatcher.
-AllocateAllTheWay = Allocate Train as far as possible
-AllocateAllTheWayBoxHint = <html>Select for Train to be allocated from start to end as far as possible.<br>\
-  Leave unchecked to allocate no more than three Sections ahead.</html>
+AllocateAllTheWayHint = <html>Select for Train to be allocated from start to end<br>\
+  as far as possible.</html>
+AllocateSafeHint = <html>Select if different trains go through a single Block in 2 directions.<br>\
+  Train 1 will be allocated to next <b>Safe</b> Section.</html>
 LoadAtStartup = Load Train at Startup
 LoadAtStartupBoxHint = Select for Train to be loaded when Dispatcher starts. Press [Create]/[Update Train] to take effect.
 ResetWhenDoneBoxHint = Select for continuous running, to automatically reset for another run through the selected Transit (in same direction).
