--- a/java/src/jmri/NamedBeanBundle.properties
+++ b/java/src/jmri/NamedBeanBundle.properties
@@ -261,6 +261,7 @@ ButtonWrite             = Write
 ButtonPrint             = Print
 ButtonStop              = Stop
 ButtonStart             = Start
+ButtonCreate            = Create
 
 Renameddd               = Rename...
 Duplicateddd            = Duplicate...
