--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
@@ -122,9 +122,9 @@ StopBySpeedProfileAdjustLabel = Adjust:
 StopBySpeedProfileAdjustHint = Only if Stopping By Speed Profile 1500 is normal; larger numbers stop quicker.
 AutoRunBoxHint = Select to request this Train be run automatically by JMRI Dispatcher.
 AllocateAllTheWayHint = <html>Select for Train to be allocated from start to end<br>\
-  as far as possible.</html>
+  <b>as far as</b> possible.</html>
 AllocateSafeHint = <html>Select if different trains go through a single Block in 2 directions.<br>\
-  Train 1 will be allocated to next <b>Safe</b> Section.</html>
+  Train 1 will be allocated to the next <b>Safe</b> Section.</html>
 LoadAtStartup = Load Train at Startup
 LoadAtStartupBoxHint = Select for Train to be loaded when Dispatcher starts. Press [Create]/[Update Train] to take effect.
 ResetWhenDoneBoxHint = Select for continuous running, to automatically reset for another run through the selected Transit (in same direction).
@@ -142,12 +142,11 @@ RestartSensor = Restart on Sensor
 RestartSensorHint = Select the Sensor that will trigger the reallocation of the Transit
 RestartTimed = Time in Minutes to wait
 RestartTimedHint = Enter the amount of time in minutes that Dispatcher will wait until the Transit is reallocated
-DelayRestart = Add Delay
+DelayRestart = Add Delay:
 DelayedReStartHint = Add a delay between the circuits, when running continuously
 DepartureTime = Departure Time:
 DepartureTimeHrHint = Enter fast clock departure time hours (24-hour clock: 00-23).
 DepartureTimeMinHint = Enter fast clock departure time minutes (00-59).
-AddNewTrainButton = Add New Train
 AddNewTrainButtonHint = Click to activate a new Train using the entered information.
 CancelButtonHint = Click to cancel without activating a new Train.
 LoadButton = Load Train Info...
