--- a/java/src/jmri/NamedBeanBundle.properties
+++ b/java/src/jmri/NamedBeanBundle.properties
@@ -58,7 +58,9 @@ LightStateTransitioningLower = Transitioning Lower
 LightStateTransitioningToFullOff = Transitioning to Full Off
 
 TurnoutStateClosed      = Closed
+StateClosedShort        = C
 TurnoutStateThrown      = Thrown
+StateThrownShort        = T
 
 TurnoutOperationOff     = Off
 TurnoutOperationDefault = Use Global Default 
