update nl, de profile gui, add tooltips, (re)move shared LayoutScale key

--- a/java/src/jmri/jmrit/Bundle.properties
+++ b/java/src/jmri/jmrit/Bundle.properties
@@ -250,3 +250,7 @@ SendOneLabel            = Send one packet:
 SendSequenceLabel       = Send a sequence of packets:
 Packet                  = Packet
 WaitMsec                = Wait (msec)
+
+# warrants, dispatcher, speed profiling items
+LabelLayoutScale = Layout Scale:
+ScaleBoxHint = Select the scale of your model railroad.
