--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
@@ -262,9 +262,7 @@ FastClockWarn = At least one Active Train is waiting \non the fast clock, but no
 FastClockWarn2 = At least one Active Train needs the \nfast clock for its restart, but no clock is running.\nDo you want to start the fast clock?
 ButtonYesStart = Start JMRI Fast Clock
 
-LayoutScale = Layout Scale
-ScaleBoxHint = Select the scale of your model railroad.
-
+# error messages
 Error1 = The name "{0}" does not match an existing Transit.\nPlease correct or create as required, and try again.
 Error2 = Transit "{0}" is in use with another Active Train.\nPlease wait until it''s IDLE, or use a duplicate.
 Error3 = Train ID is missing from request to create an Active Train.\nPlease add train ID and try again.
