add tooltips to profiling pane, explain test, inset table instruction from edge, add table screen shot in help

--- a/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle.properties
+++ b/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle.properties
@@ -12,7 +12,6 @@ TitleTestProfile = Test
 ButtonClear = Clear Profile
 ButtonUpdate = Update Profile
 TitleView = View
-#ButtonView = View
 ButtonViewCurrent = Current
 ButtonViewNew = New
 ButtonViewMerged = Merged
@@ -31,12 +30,15 @@ LabelFinishSensor = Finish Sensor
 LabelSelectRoster = Roster Entry to Profile:
 TestProfileData = Test Data
 LabelTestStep   = Step
+StepTestToolTip = Enter a Speed Step value to use in Test value 1 to the maximum set in the decoder.
 LabelTestStepFwd = Forward
 LabelTestStepRev = Reverse
+ForwardTestToolTip = Will show measured Forward speed in test (not editable)
+ReverseTestToolTip = Will show measured Reverse speed in test (not editable)
 LabelStartStep  = Profile Start Step
 StartStepToolTip = Default value = 1
 LabelFinishStep = Profile End Step
-FinishStepToolTip = Default = MAXstep
+FinishStepToolTip = Default = MAXstep as set in the decoder
 LabelStepIncr   = Increment Steps by
 StepIncrToolTip = Default value = 1
 
