fix grapevine node config frame and table NPEs (tc param, Bundle), Javadoc

--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -220,7 +220,7 @@ SentTitle               = Sent
 ReceivedTitle           = Received
 Timeout                 = Timeout
 
-# cmri/rps/maple/acela shared items
+# cmri/rps/maple/acela/grapevine shared items
 ConfigNodesTitle        = Configure Nodes
 LabelPoll               = Poll
 PollToolTip             = Send poll request
@@ -234,6 +234,12 @@ ShowOutputTip           = Select this button to show output bit assignments
 HeadingBit              = Bit
 InputBitsAnd            = input bits and
 OutputBits              = output bits
+
+ButtonAdd               = Add Node
+ButtonEdit              = Edit Node
+ButtonDelete            = Delete Node
+ButtonInit              = Init Node
+ButtonUpdate            = Update Node
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Get System Information
