SCWarrants changed so that allocation and deallocation of blocks is done for the entire route at once. By this change, two warrants using the same block(s) as part of their route will not run the trains simultaneously. It is more robust - probably also more prototypical, but give  little less liveliness on the layout. In addition, a speed factor has been introduced for SCWarrants, so that the maximum speed can be determined per warrant.

--- a/java/src/jmri/jmrit/logix/WarrantBundle.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle.properties
@@ -354,6 +354,8 @@ NoBlock         = No Block
 Forward         = Run forward
 TTP             = TTP
 TTPtoolTip      = Time (in milliseconds) to run at low speed in the destination block to go to platform.
+SF              = Speed %
+sfToolTip       = The percentage (between 10 and 100) to which the speed is reduced. 100% means no speed reduction.
 SelectType      = Warrant Type
 SetSCParameters = Settings
 SmallLayoutTrainAutomater = Fast reacting
