trying to get username in tc connected jmrix Javadocs

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
@@ -9,6 +9,8 @@ MenuItemSendCommand         = Send Command
 MenuItemConfigNodes         = Configure Nodes
 MenuItemNodeTable           = Node Table
 
+GrapevineSerialName         = Grapevine (ProTrak) Layout Bus
+
 # GrapevineTurnout (Add to table pane) items
 AddOutputEntryToolTip       = 22103 (output, card/bank 1, connector 3)
 AddInputEntryToolTip        = 22016 (Sensor node 22, pin 16)<br>\
