have tests clean up memo and tc, Gv tests pass again use Gv as initial connection name Javadoc, comment out logging in tests

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
@@ -10,6 +10,7 @@ MenuItemConfigNodes         = Configure Nodes
 MenuItemNodeTable           = Node Table
 
 GrapevineSerialName         = Grapevine (ProTrak) Layout Bus
+ErrorInvalidMessageLength   = Entered message string has invalid length.\nEnter as a 4 byte hex string.
 
 # GrapevineTurnout (Add to table pane) items
 AddOutputEntryToolTip       = 22103 (output, card/bank 1, connector 3)
