secsi, grapevine i18n, reuse node bundles use JSpinner to set node address

--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle.properties
@@ -74,5 +74,5 @@ ConfirmDeleteTitle = Confirm Deletion
 ConfirmUpdate3 = Are you sure you want to update the configuration of this panel node?
 ConfirmUpdateTitle = Confirm Update
 
-Reminder1 = Remember to save your new Maple configuration information to disk.
+ReminderNode1 = Remember to save your new Maple configuration information to disk.
 Reminder2 = Use the Save button in the Preferences window.
