--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -213,6 +213,8 @@ SendXCommandTitle       = Send {0} Command
 CommandLabel            = Command:
 ReplyLabel              = Reply:
 EnterASCIIToolTip       = Enter command as ASCII string (hex not yet available)
+EnterHexToolTip         = Enter command as hexadecimal bytes, each separated by a space
+TooltipSendPacket       = Send the Packet entered above
 TooltipSent             = The number of packets sent
 TooltipReceived         = The number of packets received
 TooltipClearCounters    = Clear the sent and received packet counters
@@ -220,9 +222,10 @@ SentTitle               = Sent
 ReceivedTitle           = Received
 Timeout                 = Timeout
 
-# cmri/rps/maple/acela/grapevine shared items
+# cmri/rps/maple/secsi/acela/grapevine shared items (addressing Nodes)
 ConfigNodesTitle        = Configure Nodes
 LabelPoll               = Poll
+ButtonQueryNode         = Query Node
 PollToolTip             = Send poll request
 NodePanelName           = Node
 NodeBoxLabel            = Node:
@@ -235,11 +238,35 @@ HeadingBit              = Bit
 InputBitsAnd            = input bits and
 OutputBits              = output bits
 
+LabelNodeAddress        = Node Address:
+TooltipNodeAddress      = Enter Node address (decimal integer)
 ButtonAdd               = Add Node
 ButtonEdit              = Edit Node
 ButtonDelete            = Delete Node
 ButtonInit              = Init Node
 ButtonUpdate            = Update Node
+ReminderNode1           = Remember to save your new Node Configuration information to disk.
+Reminder2               = Use the Save button in the Preferences window.
+
+ConfirmDeleteTitle      = Confirm Deletion
+ConfirmDelete1          = Are you sure you want to delete this Node?
+ConfirmDelete2          = Any Sensors, Turnouts, or Lights with this node address will be affected.
+ConfirmUpdateTitle      = Confirm Update
+ConfirmUpdate2          = Sensor, Turnout, and Light addresses may be affected.
+ConfirmUpdate3          = Are you sure you want to update this Node?
+
+# Node edit feedback
+# The longest of the next three lines determines the window width.
+NotesStd1               = To Add a new node, enter information and select 'Add Node'.
+NotesStd2               = To Edit a node, enter node address, then select 'Edit Node'.
+NotesStd3               = To Delete a node, enter node address, then select 'Delete Node'.
+# These three lines must be shorter than the longest line above.
+NotesEdit1              = Please check Node Address before making changes.
+NotesEdit2              = To change this node, make changes, then select 'Update Node'.
+NotesEdit3              = To leave Edit without changing this node, select 'Cancel'.
+# All Errorxx lines below must be shorter than the longest NotesStdx line above. Can override in package nodeconfig Bundle
+Error1                  = Error - Node with address '{}' already exists, please try again.
+Error3                  = Error when creating new node. Node not added.
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Get System Information
