--- a/java/src/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle.properties
+++ b/java/src/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle.properties
@@ -98,5 +98,5 @@ ConfirmUpdate2      = Sensor, Turnout, and Light addresses may be affected.
 ConfirmUpdate3      = Are you sure you want to update this node?
 ConfirmUpdateTitle  = Confirm Update
 
-Reminder1           = Remember to save your new C/MRI node information to disk.
+ReminderNode1       = Remember to save your new C/MRI node information to disk.
 Reminder2           = Use the [{0}] button in the Preferences window.
