--- a/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle.properties
@@ -7,10 +7,9 @@ WindowTitle         = Configure Grapevine Nodes
 BoxLabelNotes       = Notes
 
 LabelCardSize       = Card Size:
-LabelNodeAddress    = Node Address:
 LabelNodeType       = Node Type:
 
-TipNodeAddress      = Enter node address, numbering from 1.
+TipNodeAddress      = Enter node address, numbering from 1 to 255 (included).
 TipNodeType         = Select type of node.
 TipAddButton        = Add a new node
 TipEditButton       = Edit an existing node
@@ -21,32 +20,10 @@ TipUpdateButton     = Change node information
 TipCancelButton     = Stop edit without changing node
 
 # The longest of the next three lines determines the window width.
-NotesStd1   = To Add a new node, enter information and select 'Add Node'.
-NotesStd2   = To Edit a node, enter node address, then select 'Edit Node'.
-NotesStd3   = To Delete a node, enter node address, then select 'Delete Node'.
-# These three lines must be shorter than the longest line above.
-NotesEdit1  = Please check Node Address before making changes.
-NotesEdit2  = To change this node, make changes, then select 'Update Node'.
-NotesEdit3  = To leave Edit without changing this node, select 'Cancel'.
-
+#NotesStd3   = To Delete a node, enter node address, then select 'Delete Node'. // moved to jmrix.Bundle
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
-Error1    = Error - Node with address '
-Error2    = ' already exists, please try again.
-Error3    = Error when creating new node. Node not added.
 Error4    = Error - No node with entered Node Address(UA), please try again.
-Error5    = Error - Bad character in Node Address (UA), please try again.
-Error6    = Error - Node Address is not between 0 and 255.
 
 FeedBackAdd     = Node added. Node Address =
 FeedBackDelete  = Node deleted. Node Address =
 FeedBackUpdate  = Node updated. Node Address =
-
-ConfirmDelete1  = Are you sure you want to delete this node?
-ConfirmDelete2  = Any Sensors, Turnouts, or Lights with this node address will be affected.
-ConfirmDeleteTitle = Confirm Deletion
-ConfirmUpdate2  = Sensor, Turnout, and Light addresses may be affected.
-ConfirmUpdate3  = Are you sure you want to update this node?
-ConfirmUpdateTitle  = Confirm Update
-
-Reminder1  = Remember to save your new node information.
-Reminder2  = Use the Save button in the Preferences window.
