--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -246,18 +246,18 @@ ButtonDelete            = Delete Node
 ButtonInit              = Init Node
 ButtonUpdate            = Update Node
 ReminderNode1           = Remember to save your new Node Configuration information to disk.
-Reminder2               = Use the Save button in the Preferences window.
+Reminder2               = Use the [Save] button in the Preferences window.
 
 ConfirmDeleteTitle      = Confirm Deletion
 ConfirmDelete1          = Are you sure you want to delete this Node?
-ConfirmDelete2          = Any Sensors, Turnouts, or Lights with this node address will be affected.
+ConfirmDelete2          = Any Sensors, Turnouts, or Lights with this Node Address will be affected.
 ConfirmUpdateTitle      = Confirm Update
 ConfirmUpdate2          = Sensor, Turnout, and Light addresses may be affected.
 ConfirmUpdate3          = Are you sure you want to update this Node?
 
 # Node edit feedback
 # The longest of the next three lines determines the window width.
-NotesStd1               = To Add a new node, enter information and select 'Add Node'.
+NotesStd1               = To Add a new Node, enter information and select 'Add Node'.
 NotesStd2               = To Edit a node, enter node address, then select 'Edit Node'.
 NotesStd3               = To Delete a node, enter node address, then select 'Delete Node'.
 # These three lines must be shorter than the longest line above.
@@ -265,8 +265,8 @@ NotesEdit1              = Please check Node Address before making changes.
 NotesEdit2              = To change this node, make changes, then select 'Update Node'.
 NotesEdit3              = To leave Edit without changing this node, select 'Cancel'.
 # All Errorxx lines below must be shorter than the longest NotesStdx line above. Can override in package nodeconfig Bundle
-Error1                  = Error - Node with address '{}' already exists, please try again.
-Error3                  = Error when creating new node. Node not added.
+Error1                  = Error - Node with address '{0}' already exists, please try again.
+Error3                  = Error when creating new Node. Node not added.
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Get System Information
