--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -240,11 +240,29 @@ OutputBits              = output bits
 
 LabelNodeAddress        = Node Address:
 TooltipNodeAddress      = Enter Node address (decimal integer)
+LabelCardSize           = Card Size:
+LabelNodeType           = Node Type:
+BoxLabelNotes           = Notes
+
 ButtonAdd               = Add Node
 ButtonEdit              = Edit Node
 ButtonDelete            = Delete Node
 ButtonInit              = Init Node
 ButtonUpdate            = Update Node
+# tooltips
+TipNodeAddress          = Enter node address.
+TipNodeType             = Select type of node.
+TipAddButton            = Add a new node
+TipEditButton           = Edit an existing node
+TipDeleteButton         = Delete an existing node
+TipInitButton           = Send initialization messages to node
+TipDoneButton           = Select when done configuring nodes
+TipUpdateButton         = Change node information
+TipCancelButton         = Stop edit without changing node
+
+FeedBackAdd             = Node added. Node Address =
+FeedBackDelete          = Node deleted. Node Address =
+FeedBackUpdate          = Node updated. Node Address =
 ReminderNode1           = Remember to save your new Node Configuration information to disk.
 Reminder2               = Use the [Save] button in the Preferences window.
 
@@ -252,6 +270,7 @@ ConfirmDeleteTitle      = Confirm Deletion
 ConfirmDelete1          = Are you sure you want to delete this Node?
 ConfirmDelete2          = Any Sensors, Turnouts, or Lights with this Node Address will be affected.
 ConfirmUpdateTitle      = Confirm Update
+ConfirmUpdate1          = This edit will reduce the number of cards for this node.
 ConfirmUpdate2          = Sensor, Turnout, and Light addresses may be affected.
 ConfirmUpdate3          = Are you sure you want to update this Node?
 
@@ -267,6 +286,7 @@ NotesEdit3              = To leave Edit without changing this node, select 'Canc
 # All Errorxx lines below must be shorter than the longest NotesStdx line above. Can override in package nodeconfig Bundle
 Error1                  = Error - Node with address '{0}' already exists, please try again.
 Error3                  = Error when creating new Node. Node not added.
+Error4                  = Error - No node with entered Node Address, please try again.
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Get System Information
