--- a/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/nodeconfig/NodeConfigBundle.properties
@@ -4,26 +4,8 @@
 
 WindowTitle         = Configure Grapevine Nodes
 
-BoxLabelNotes       = Notes
-
-LabelCardSize       = Card Size:
-LabelNodeType       = Node Type:
-
 TipNodeAddress      = Enter node address, numbering from 1 to 255 (included).
-TipNodeType         = Select type of node.
-TipAddButton        = Add a new node
-TipEditButton       = Edit an existing node
-TipDeleteButton     = Delete an existing node
-TipInitButton       = Send initialization messages to node
-TipDoneButton       = Select when done configuring nodes
-TipUpdateButton     = Change node information
-TipCancelButton     = Stop edit without changing node
 
 # The longest of the next three lines determines the window width.
-#NotesStd3   = To Delete a node, enter node address, then select 'Delete Node'. // moved to jmrix.Bundle
-# All Errorxx lines below must be shorter than the longest NotesStdx line above.
+# All Errorxx lines below must be shorter than the longest NotesStdx line in jmrix.Bundle.
 Error4    = Error - No node with entered Node Address(UA), please try again.
-
-FeedBackAdd     = Node added. Node Address =
-FeedBackDelete  = Node deleted. Node Address =
-FeedBackUpdate  = Node updated. Node Address =
