--- a/build.xml
+++ b/build.xml
@@ -338,6 +338,14 @@
         <exclude name="jmri/util/swing/SamplePane.class" />
         <exclude name="apps/tests/Log4JFixture.class" />
         <exclude name="jmri/jmrit/display/EditorFrameOperator.class" />
+        <!-- Exclude pure interfaces and classes only providing constants. -->
+        <exclude name="jmri.jmrit.operations.locations.Xml.class" />
+        <exclude name="jmri.jmrit.operations.rolligstock.cars.Xml.class"/>
+        <exclude name="jmri.jmrit.operations.rolligstock.engines.Xml.class" />
+        <exclude name="jmri.jmrit.operations.trains.Xml.class" />
+        <exclude name="jmri.jmris.simpleserver.parser.JmriServerParserTreeConstants.class" />
+        <exclude name="jmri.jmrix.srcp.parser.SRCPClientParserTreeConstants.class" />
+        <exclude name="jmri.jmris.srcp.parser.SRCPParserTreeConstants.class" />
     </fileset>
 
 
@@ -1304,6 +1312,9 @@
                  <limit counter="CLASS" value="COVEREDCOUNT" minimum="1"/>
               </rule>
               <rule element="SOURCEFILE">
+                 <executiondata>
+                   <file file="${jacocosourceexec}" />
+                 </executiondata>
                  <limit counter="LINE" value="COVEREDCOUNT" minimum="1"/>
               </rule>
           </check>
