--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
@@ -8,6 +8,8 @@ MenuItemCommandMonitor      = Communications Monitor
 MenuItemNodeTable           = Node Table
 
 GrapevineSerialName         = Grapevine (ProTrak) Layout Bus
+GrapevineSimulatorName      = Grapevine Simulator
+
 ErrorInvalidMessageLength   = Entered message string has invalid length.\nEnter as a 4 byte hex string.
 
 ButtonSetParity             = Set Parity
