another attempt at getting the exclude right.

--- a/pom.xml
+++ b/pom.xml
@@ -529,13 +529,13 @@
                                     <element>SOURCEFILE</element>
                                     <excludes>
                                        <!-- pure interfaces and classes of constants -->
-                                       <exclude>jmri.jmrit.operations.locations.Xml.class</exclude>
-                                       <exclude>jmri.jmrit.operations.rolligstock.cars.Xml.class</exclude>
-                                       <exclude>jmri.jmrit.operations.rolligstock.engines.Xml.class</exclude>
-                                       <exclude>jmri.jmrit.operations.trains.Xml.class</exclude>
-                                       <exclude>jmri.jmris.simpleserver.parser.JmriServerParserTreeConstants.class</exclude>
-                                       <exclude>jmri.jmrix.srcp.parser.SRCPClientParserTreeConstants.class</exclude>
-                                       <exclude>jmri.jmris.srcp.parser.SRCPParserTreeConstants.class</exclude>
+                                       <exclude>jmri.jmrit.operations.locations.Xml.java</exclude>
+                                       <exclude>jmri.jmrit.operations.rolligstock.cars.Xml.java</exclude>
+                                       <exclude>jmri.jmrit.operations.rolligstock.engines.Xml.java</exclude>
+                                       <exclude>jmri.jmrit.operations.trains.Xml.java</exclude>
+                                       <exclude>jmri.jmris.simpleserver.parser.JmriServerParserTreeConstants.java</exclude>
+                                       <exclude>jmri.jmrix.srcp.parser.SRCPClientParserTreeConstants.java</exclude>
+                                       <exclude>jmri.jmris.srcp.parser.SRCPParserTreeConstants.java</exclude>
                                     </excludes>
                                     <limits>
                                         <limit>
