--- a/build.xml
+++ b/build.xml
@@ -339,13 +339,13 @@
         <exclude name="apps/tests/Log4JFixture.class" />
         <exclude name="jmri/jmrit/display/EditorFrameOperator.class" />
         <!-- Exclude pure interfaces and classes only providing constants. -->
-        <exclude name="jmri.jmrit.operations.locations.Xml.class" />
-        <exclude name="jmri.jmrit.operations.rolligstock.cars.Xml.class"/>
-        <exclude name="jmri.jmrit.operations.rolligstock.engines.Xml.class" />
-        <exclude name="jmri.jmrit.operations.trains.Xml.class" />
-        <exclude name="jmri.jmris.simpleserver.parser.JmriServerParserTreeConstants.class" />
-        <exclude name="jmri.jmrix.srcp.parser.SRCPClientParserTreeConstants.class" />
-        <exclude name="jmri.jmris.srcp.parser.SRCPParserTreeConstants.class" />
+        <exclude name="jmri/jmrit/operations/locations/Xml.class" />
+        <exclude name="jmri/jmrit/operations/rolligstock/cars/Xml.class"/>
+        <exclude name="jmri/jmrit/operations/rolligstock/engines/Xml.class" />
+        <exclude name="jmri/jmrit/operations/trains/Xml.class" />
+        <exclude name="jmri/jmris/simpleserver/parser/JmriServerParserTreeConstants.class" />
+        <exclude name="jmri/jmrix/srcp/parser/SRCPClientParserTreeConstants.class" />
+        <exclude name="jmri/jmris/srcp/parser/SRCPParserTreeConstants.class" />
     </fileset>
 
 
