Improve Gv node table frame more Gc sim replies Dutch translation

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle.properties
@@ -14,6 +14,10 @@ ErrorInvalidMessageLength   = Entered message string has invalid length.\nEnter 
 
 ButtonSetParity             = Set Parity
 
+#Simulator items
+RenumberSupport             = Node Renumbering is not supported using Simulator.\n\
+  Use the Add/Delete Node tool instead.
+
 # GrapevineTurnout (Add to table pane) items
 AddOutputEntryToolTip       = 22103 (output, card/bank 1, connector 3)
 AddInputEntryToolTip        = 22016 (Sensor node 22, pin 16)<br>\
