--- a/java/src/jmri/jmrix/grapevine/nodetable/NodeTableBundle.properties
+++ b/java/src/jmri/jmrix/grapevine/nodetable/NodeTableBundle.properties
@@ -6,11 +6,12 @@ WindowTitle     = Grapevine Nodes
 WindowTitleRenumber = Change Grapevine Board Address
 
 ButtonCheck     = Check
-TipCheck        = Click to update Grapevine status
+TipCheck        = Click to refresh Grapevine status
 
 StatusOK        = OK
-StatusStart     = Starting
-StatusRunning   = Checking
+StatusStart     = Starting...
+StatusRunning   = Checking...
+StatusRunningX  = Checking node {0}/{1}
 StatusFail      = Grapevine failed
 
 StatusPresent   = Present
@@ -22,7 +23,7 @@ TitleAddress    = Address
 
 ButtonInit      = Init
 
-ButtonRenumber  = Change Node Board Address
+ButtonRenumber  = Change Node Board Address...
 
 LabelFrom       = Current Address: 
 LabelTo         = New Address: 
